--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
   "license": "ISC",
   "dependencies": {
     "@babel/runtime": "^7.16.3",
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "http-errors": "^1.6.2",
     "joi": "^17.4.2",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.2.0"
   },
   "devDependencies": {
