--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "http-errors": "^1.6.2",
     "joi": "^17.4.2",
     "jsonwebtoken": "^8.5.1",
-    "mongodb": "^4.2.0"
+    "mongodb": "^4.2.0",
+    "redis": "^3.1.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.16.0",
